add default value to VGS_PROXY_CERTIFICATE_B64 (#6)
make VGS_PROXY_CERTIFICATE_B64 not required

--- a/app.json
+++ b/app.json
@@ -16,7 +16,7 @@
     },
     "VGS_PROXY_CERTIFICATE_B64": {
       "description": "VGS proxy certificate encoded as a base64 string",
-      "required": true
+      "required": false
     },
     "PUBLIC_URL": {
       "description": "The public URL of the server without `/` at the end, https://{app-name}.herokuapp.com",
