--- a/routes/inbound.yaml
+++ b/routes/inbound.yaml
@@ -36,7 +36,7 @@ data:
         expression:
          field: ContentType
          type: string
-         operator: media_type_equals
+         operator: equals
          values: [application/json;charset=UTF-8]
       expression: null
     -
@@ -71,7 +71,7 @@ data:
         expression:
          field: ContentType
          type: string
-         operator: media_type_equals
+         operator: equals
          values: [application/json]
       expression: null
    host_endpoint: '(.*)\.verygoodproxy\.com'
